--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "spinkit": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,7 +44,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0",
-    "redux-devtools-extension": "^2.13.8"
+    "gh-pages": "^3.1.0"
   }
 }
